--- a/Pages/Products.cshtml
+++ b/Pages/Products.cshtml
@@ -131,12 +131,18 @@
             {
                 <div class="col-lg-3 col-md-4 col-sm-6 mix @product.Category">
                     <div class="featured__item">
+                      <div class="featured__item__pic set-bg" data-setbg="data:image;base64,@Convert.ToBase64String(product.ImageData)">
+                            <ul class="featured__item__pic__hover">
+                                <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
+                            </ul>
+                        </div> 
                         <div class="featured__item__text">
                             <h6><a href="ProductView">@product.Name</a></h6>
                             <h5>@product.Price</h5>
                         </div>
                     </div>
                 </div>
+
             }
         </div>
     </div>
