--- a/Pages/AddSP.cshtml
+++ b/Pages/AddSP.cshtml
@@ -87,7 +87,15 @@
         </div>
         <div class="form-group">
             <label for="category">Category:</label>
-            <input type="text" id="category" name="category" asp-for="category" required>
+            <br/>
+            <select id="category" name="category" asp-for="category" required>
+                <option value="Artwork">Artwork</option>
+                <option value="Handcrafted jewelry">Handcrafted jewelry</option>
+                <option value="Home decor items">Home decor items</option>
+                <option value="Clothing and accessories">Clothing and accessories</option>
+                <option value="Pottery and ceramics">Pottery and ceramics</option>
+                <option value="Woodwork and furniture">Woodwork and furniture</option>
+            </select>
         </div>
         <div class="form-group">
             <label for="price">Price:</label>
