--- a/Pages/AddSP2.cshtml
+++ b/Pages/AddSP2.cshtml
@@ -87,7 +87,16 @@
         </div>
         <div class="form-group">
             <label for="category">Category:</label>
-            <input type="text" id="category" name="category" asp-for="category" required>
+            <br/>
+            <select id="category" name="category" asp-for="category" required>
+                <option value="Antiquing and restoration">Antiquing and restoration</option>
+                <option value="Painting and drawing">Painting and drawing</option>
+                <option value="Graphic design">Graphic design</option>
+                <option value="Photography">Photography</option>
+                <option value="Fashion Design">Fashion Design</option>
+                <option value="Mechanical and repair">Mechanical and repair</option>
+                <option value="Carpentry">Carpentry</option>
+            </select>
         </div>
         <div class="form-group">
             <label for="price">Price:</label>
