--- a/Pages/OfferedSP.cshtml
+++ b/Pages/OfferedSP.cshtml
@@ -3,7 +3,7 @@
 @{
 }
 <!-- Products and Services Section Begin -->
-<section class="featured spad">
+@* <section class="featured spad">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
@@ -50,6 +50,44 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+</section> *@
+
+<section class="featured spad">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="section-title">
+                    <h2>Offered Services & Products</h2>
+                </div>
+                <div class="featured__controls">
+                    <ul>
+                        <li class="active" data-filter="*">All</li>
+                        <li data-filter=".Product">Products</li>
+                        <li data-filter=".services">Services</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div class="row featured__filter">
+                @foreach (var item in Model.ProductsServices)
+                {
+                <div class="col-lg-3 col-md-4 col-sm-6 mix @item.Type">
+                        <div class="featured__item">
+                            <div class="featured__item__pic set-bg" data-setbg="data:image;base64,@Convert.ToBase64String(item.ImageData)">
+                                <ul class="featured__item__pic__hover">
+                                    <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
+                                </ul>
+                            </div>
+                            <div class="featured__item__text">
+                                <h6><a href="#">@item.Name</a></h6>
+                                <h5>@item.Price</h5>
+                            </div>
+                        </div>
+                    </div>
+                }
         </div>
     </div>
 </section>
