--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -55,6 +55,7 @@
                                 <ul class="header__menu__dropdown">
                                     <li><a href="./ShopCart">Shoping Cart</a></li>
                                     <li><a href="./Checkout">Check Out</a></li>
+                                    <li><a href="./ServiceView">Service View</a></li>
                                 </ul>
                             </li>
                         </ul>
