--- a/Pages/ProductView.cshtml
+++ b/Pages/ProductView.cshtml
@@ -38,8 +38,7 @@
             <main class="col-lg-6">
                 <div class="ps-lg-3">
                     <h4 class="title text-dark">
-                        Product <br />
-                        Category
+                        @Model.Name
                     </h4>
                     <div class="d-flex flex-row my-3">
                         <div class="text-warning mb-1 me-2">
@@ -57,7 +56,7 @@
                     </div>
 
                     <div class="mb-3">
-                        <span class="h5">@Model.</span>
+                        <span class="h5">Product Category</span>
                     </div>
 
                     <p>
