--- a/Pages/AddSP.cshtml
+++ b/Pages/AddSP.cshtml
@@ -88,13 +88,14 @@
         <div class="form-group">
             <label for="category">Category:</label>
             <br/>
+
             <select id="category" name="category" asp-for="category" required>
-                <option value="Artwork">Artwork</option>
-                <option value="Handcrafted jewelry">Handcrafted jewelry</option>
-                <option value="Home decor items">Home decor items</option>
-                <option value="Clothing and accessories">Clothing and accessories</option>
-                <option value="Pottery and ceramics">Pottery and ceramics</option>
-                <option value="Woodwork and furniture">Woodwork and furniture</option>
+                <option value="artwork">Artwork</option>
+                <option value="handcrafted-jewelry">Handcrafted jewelry</option>
+                <option value="home-decor">Home decor items</option>
+                <option value="clothing">Clothing and accessories</option>
+                <option value="pottery">Pottery and ceramics</option>
+                <option value="woodwork">Woodwork and furniture</option>
             </select>
         </div>
         <div class="form-group">
