--- a/Pages/AddSP2.cshtml
+++ b/Pages/AddSP2.cshtml
@@ -88,14 +88,15 @@
         <div class="form-group">
             <label for="category">Category:</label>
             <br/>
+           
             <select id="category" name="category" asp-for="category" required>
-                <option value="Antiquing and restoration">Antiquing and restoration</option>
-                <option value="Painting and drawing">Painting and drawing</option>
-                <option value="Graphic design">Graphic design</option>
-                <option value="Photography">Photography</option>
-                <option value="Fashion Design">Fashion Design</option>
-                <option value="Mechanical and repair">Mechanical and repair</option>
-                <option value="Carpentry">Carpentry</option>
+                <option value="antique">Antiquing and restoration</option>
+                <option value="painting">Painting and drawing</option>
+                <option value="graphic-design">Graphic design</option>
+                <option value="photography">Photography</option>
+                <option value="fashion-design">Fashion Design</option>
+                <option value="mechanical">Mechanical and repair</option>
+                <option value="carpentry">Carpentry</option>
             </select>
         </div>
         <div class="form-group">
