--- a/Pages/ShopCart.cshtml
+++ b/Pages/ShopCart.cshtml
@@ -98,11 +98,14 @@
                                         </td>
                                         <td class="shoping__cart__quantity">
                                             <div class="quantity">
-                                                <div class="pro-qtyJO">
-                                                    <button class="qtybtnJO minus">-</button>
-                                                    <input type="text" value="@product.Quantity">
-                                                    <button class="qtybtnJO plus">+</button>
-                                                </div>
+                                                <form method="post">
+                                                    <input type="hidden" name="updatedProductId" value="@product.ProductID" />
+                                                    <div class="pro-qtyJO">
+                                                        <button type="submit" name="updatedQuantity" value="decrease" class="qtybtnJO minus">-</button>
+                                                        <input type="text" name="updatedQuantity" value="@product.Quantity" class="quantity-input" readonly />
+                                                        <button type="submit" name="updatedQuantity" value="increase" class="qtybtnJO plus">+</button>
+                                                    </div>
+                                                </form>
                                             </div>
                                         </td>
                                         <td class="shoping__cart__total">
@@ -172,9 +175,9 @@
                     </div>
                 </div>
 
-                <form method="post">
+                @* <form method="post">
                     <button type="submit" id="logoutButton">Update Cart</button>
-                </form>
+                </form> *@
 
                 <div class="row">
                     <div class="col-lg-12">
@@ -196,7 +199,7 @@
         </section>
         <!-- Shoping Cart Section End -->
 
-<script>
+@* <script>
     document.addEventListener('DOMContentLoaded', function () {
         var quantityInput = document.querySelector('.pro-qtyJO input');
 
@@ -213,4 +216,4 @@
             }
         });
     });
-</script>
+</script> *@
